Working on appointment system.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hello_app",
+  "name": "ProjectCloset",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {}
 }
